<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/PREF_CATEGORY_BASE">
		<CheckBoxPreference android:summary="@string/PREF_SUMMARY_AUTO_BOOT"
			android:title="@string/PREF_TITLE_AUTO_BOOT" android:key="AUTOBOOT"></CheckBoxPreference>
		<CheckBoxPreference android:summary="@string/PREF_SUMMARY_AUTO_CHANGE"
			android:title="@string/PREF_TITLE_AUTO_CHANGE" android:key="AUTOCHANGE"></CheckBoxPreference>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/PREF_CATEGORY_PROXY">
		<EditTextPreference android:summary="@string/PREF_SUMMARY_PROXY_HOST"
			android:title="@string/PREF_TITLE_PROXY_HOST" android:key="PROXYHOST"/>
			<EditTextPreference android:summary="@string/PREF_SUMMARY_PROXY_PORT"
			android:title="@string/PREF_TITLE_PROXY_PORT" android:key="PROXYPORT"/>
	</PreferenceCategory>
</PreferenceScreen>